--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,5 +11,8 @@ steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args: ['run', 'deploy', 'docker-test-server', '--image', 'asia-docker.pkg.dev/stable-century-323714/cloud-test-repo/cloud-test', '--region', 'asia-southeast2']
+timeout: 300s
 images:
   - asia-docker.pkg/dev/stable-century-323714/cloud-test-repo/cloud-test
+options:
+  logging: CLOUD_LOGGING_ONLY
