--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -r ./www/* && (NODE_ENV=production && cd frontend && npm run build) && cp ./frontend/build/* ./www/*",
-    "clean": "rm -r ./www/*"
+    "build": "mkdir www && (NODE_ENV=production && cd frontend && npm run build) && cp -r ./frontend/build/* ./www",
+    "clean": "rm -r www"
   },
   "author": "",
   "license": "ISC"
