--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -67,12 +67,10 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Generate Static Files
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
-      - run: npm test
-        
+      - run: npm run build     
 
       - name: Google Auth
         id: auth
